--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
      <dimen name="dp_22_22">22.22dp</dimen>
      <dimen name="sp_18">18sp</dimen>
      <dimen name="dp_40">40dp</dimen>
+     <dimen name="dp_10">10dp</dimen>
 </resources>
