--- a/feature-accessibility/src/main/res/layout/layout_float_view.xml
+++ b/feature-accessibility/src/main/res/layout/layout_float_view.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/iv_menu"
     android:scaleType="fitXY"
-    android:layout_width="20dp"
-    android:layout_height="20dp"
+    android:layout_width="@dimen/dp_20"
+    android:layout_height="@dimen/dp_20"
     android:src="@drawable/accessibility_run_btn_selector"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
