--- a/core/framework/src/main/res/values-sw1024dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw1024dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">170.6667dp</dimen> 
 
  <dimen name="dp_20">56.8889dp</dimen> 
+
+ <dimen name="dp_200">568.8889dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
