--- a/core/framework/src/main/res/values-sw1280dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw1280dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">213.3333dp</dimen> 
 
  <dimen name="dp_20">71.1111dp</dimen> 
+
+ <dimen name="dp_200">711.1111dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
