--- a/core/framework/src/main/res/values-sw1365dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw1365dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">227.5000dp</dimen> 
 
  <dimen name="dp_20">75.8333dp</dimen> 
+
+ <dimen name="dp_200">758.3334dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
