--- a/core/framework/src/main/res/values-sw240dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw240dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">40.0000dp</dimen> 
 
  <dimen name="dp_20">13.3333dp</dimen> 
+
+ <dimen name="dp_200">133.3333dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
