--- a/core/framework/src/main/res/values-sw320dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw320dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">53.3333dp</dimen> 
 
  <dimen name="dp_20">17.7778dp</dimen> 
+
+ <dimen name="dp_200">177.7778dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
