--- a/core/framework/src/main/res/values-sw360dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw360dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">60.0000dp</dimen> 
 
  <dimen name="dp_20">20.0000dp</dimen> 
+
+ <dimen name="dp_200">200.0000dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
