--- a/core/framework/src/main/res/values-sw392dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw392dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">65.3333dp</dimen> 
 
  <dimen name="dp_20">21.7778dp</dimen> 
+
+ <dimen name="dp_200">217.7778dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
