--- a/core/framework/src/main/res/values-sw400dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw400dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">66.6667dp</dimen> 
 
  <dimen name="dp_20">22.2222dp</dimen> 
+
+ <dimen name="dp_200">222.2222dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
