--- a/core/framework/src/main/res/values-sw411dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw411dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">68.5000dp</dimen> 
 
  <dimen name="dp_20">22.8333dp</dimen> 
+
+ <dimen name="dp_200">228.3333dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
