--- a/core/framework/src/main/res/values-sw432dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw432dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">72.0000dp</dimen> 
 
  <dimen name="dp_20">24.0000dp</dimen> 
+
+ <dimen name="dp_200">240.0000dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
