--- a/core/framework/src/main/res/values-sw480dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw480dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">80.0000dp</dimen> 
 
  <dimen name="dp_20">26.6667dp</dimen> 
+
+ <dimen name="dp_200">266.6667dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
