--- a/core/framework/src/main/res/values-sw533dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw533dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">88.8333dp</dimen> 
 
  <dimen name="dp_20">29.6111dp</dimen> 
+
+ <dimen name="dp_200">296.1111dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
