--- a/core/framework/src/main/res/values-sw592dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw592dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">98.6667dp</dimen> 
 
  <dimen name="dp_20">32.8889dp</dimen> 
+
+ <dimen name="dp_200">328.8889dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
