--- a/core/framework/src/main/res/values-sw600dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw600dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">100.0000dp</dimen> 
 
  <dimen name="dp_20">33.3333dp</dimen> 
+
+ <dimen name="dp_200">333.3333dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
