--- a/core/framework/src/main/res/values-sw640dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw640dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">106.6667dp</dimen> 
 
  <dimen name="dp_20">35.5556dp</dimen> 
+
+ <dimen name="dp_200">355.5556dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
