--- a/core/framework/src/main/res/values-sw662dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw662dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">110.3333dp</dimen> 
 
  <dimen name="dp_20">36.7778dp</dimen> 
+
+ <dimen name="dp_200">367.7778dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
