--- a/core/framework/src/main/res/values-sw720dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw720dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">120.0000dp</dimen> 
 
  <dimen name="dp_20">40.0000dp</dimen> 
+
+ <dimen name="dp_200">400.0000dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
