--- a/core/framework/src/main/res/values-sw768dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw768dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">128.0000dp</dimen> 
 
  <dimen name="dp_20">42.6667dp</dimen> 
+
+ <dimen name="dp_200">426.6667dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
