--- a/core/framework/src/main/res/values-sw811dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw811dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">135.1667dp</dimen> 
 
  <dimen name="dp_20">45.0556dp</dimen> 
+
+ <dimen name="dp_200">450.5556dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
