--- a/core/framework/src/main/res/values-sw820dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw820dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">136.6667dp</dimen> 
 
  <dimen name="dp_20">45.5556dp</dimen> 
+
+ <dimen name="dp_200">455.5555dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
