--- a/core/framework/src/main/res/values-sw960dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw960dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">160.0000dp</dimen> 
 
  <dimen name="dp_20">53.3333dp</dimen> 
+
+ <dimen name="dp_200">533.3334dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
