--- a/core/framework/src/main/res/values-sw961dp/dimens.xml
+++ b/core/framework/src/main/res/values-sw961dp/dimens.xml
@@ -4,4 +4,8 @@
  <dimen name="dp_60">160.1667dp</dimen> 
 
  <dimen name="dp_20">53.3889dp</dimen> 
+
+ <dimen name="dp_200">533.8889dp</dimen> 
+
+ <dimen name="dp_0">0.0000dp</dimen> 
 </resources>
