--- a/feature/common/src/main/res/values/themes.xml
+++ b/feature/common/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.SycApp.Dialog" parent="Theme.MaterialComponents.Dialog">
+
+    </style>
 </resources>
